--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,26 +1,137 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleAspectFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6VU-85-oQo">
+                                <rect key="frame" x="16" y="30" width="343" height="587"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQk-4j-MNs">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="587"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="BuV-K4-dA8"/>
+                                        </constraints>
+                                        <state key="normal" title="&lt;"/>
+                                        <connections>
+                                            <action selector="beforeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vJy-0J-Wjm"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Q0-Gi-jaX">
+                                        <rect key="frame" x="30" y="0.0" width="283" height="587"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0dX-hi-6Ze">
+                                        <rect key="frame" x="313" y="0.0" width="30" height="587"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="ccU-Mv-q2X"/>
+                                        </constraints>
+                                        <state key="normal" title="&gt;"/>
+                                        <connections>
+                                            <action selector="nextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPE-VE-2nf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1bA-dH-IK5">
+                                <rect key="frame" x="116" y="627" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="faW-ud-Ver"/>
+                                </constraints>
+                                <state key="normal" title="再生"/>
+                                <connections>
+                                    <action selector="stertButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="za6-mn-zXa"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cc8-eQ-MFD">
+                                <rect key="frame" x="228" y="627" width="31" height="30"/>
+                                <state key="normal" title="停止"/>
+                                <connections>
+                                    <action selector="pauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nDc-z0-yfg"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="6VU-85-oQo" secondAttribute="trailing" id="1ep-cK-7md"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1bA-dH-IK5" secondAttribute="bottom" constant="10" id="E3k-ls-cyB"/>
+                            <constraint firstItem="1bA-dH-IK5" firstAttribute="top" secondItem="6VU-85-oQo" secondAttribute="bottom" constant="10" id="S3w-FV-a9z"/>
+                            <constraint firstItem="Cc8-eQ-MFD" firstAttribute="trailing" secondItem="6VU-85-oQo" secondAttribute="trailing" constant="-100" id="YK6-lU-qLB"/>
+                            <constraint firstItem="6VU-85-oQo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dLJ-ny-cwd"/>
+                            <constraint firstItem="1bA-dH-IK5" firstAttribute="leading" secondItem="6VU-85-oQo" secondAttribute="leading" constant="100" id="jJE-Gn-CSP"/>
+                            <constraint firstItem="Cc8-eQ-MFD" firstAttribute="bottom" secondItem="1bA-dH-IK5" secondAttribute="bottom" id="nMN-c4-7iT"/>
+                            <constraint firstItem="6VU-85-oQo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="s6V-7i-UeL"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="slideImageView" destination="3Q0-Gi-jaX" id="xcy-uV-u2A"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="352.17391304347831" y="61.600000000000001"/>
+        </scene>
+        <!--Enlarged View Controller-->
+        <scene sceneID="SuJ-DF-Lfp">
+            <objects>
+                <viewController storyboardIdentifier="enlarged" id="YkA-X5-Qom" customClass="EnlargedViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="942-O6-IDV"/>
+                        <viewControllerLayoutGuide type="bottom" id="wJZ-B0-aRe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Zh5-hJ-Pty">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UCm-BR-IQY">
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f17-SM-zLe">
+                                <rect key="frame" x="16" y="20" width="45" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="eET-yK-dFG"/>
+                                </constraints>
+                                <state key="normal" title="&lt; 戻る"/>
+                                <connections>
+                                    <segue destination="WYd-eA-J6Q" kind="unwind" unwindAction="unwindWithSegue:" id="PCN-tb-Clq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="UCm-BR-IQY" secondAttribute="trailing" id="1Nq-Pc-PB7"/>
+                            <constraint firstItem="f17-SM-zLe" firstAttribute="leading" secondItem="Zh5-hJ-Pty" secondAttribute="leadingMargin" id="RcH-ya-f4N"/>
+                            <constraint firstItem="wJZ-B0-aRe" firstAttribute="top" secondItem="UCm-BR-IQY" secondAttribute="bottom" id="bfw-Dg-qJg"/>
+                            <constraint firstItem="UCm-BR-IQY" firstAttribute="top" secondItem="f17-SM-zLe" secondAttribute="bottom" id="gE2-4i-mtM"/>
+                            <constraint firstItem="UCm-BR-IQY" firstAttribute="leading" secondItem="Zh5-hJ-Pty" secondAttribute="leading" id="lQt-bl-U6y"/>
+                            <constraint firstItem="f17-SM-zLe" firstAttribute="top" secondItem="942-O6-IDV" secondAttribute="bottom" id="mr1-yF-nJf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="UCm-BR-IQY" id="xzy-zD-tii"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hbF-Iy-gHp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="WYd-eA-J6Q" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1743" y="48"/>
         </scene>
     </scenes>
 </document>
